# shanyraq-kz

./: .gitignore  README.md  pyproject.toml  sql_app.db
app/: dependencies.py  main.py
app/announcement/: router_announcement.py
app/announcement/repository/: announcement_repository.py
app/auth/: router_auth.py
app/auth/repository/: user_repository.py
app/comment/: router_comment.py
app/comment/repository/: comment_repo.py
app/database/: models.py
app/favorite/: route_favorite.py
app/favorite/repository/: favorite_repo.py
app/superuser/: route_superuser.py
app/superuser/repository/: superuser_repo.py
migrations/: env.py
migrations/versions/: 4149140ff438_create_tables.py  6cad73297e49_changed.py  9db6ffb21ac6_create_table_superuser.py  efa9c0daf967_changed.py
